# simple-markdown-viewer

./: README.md  index.html  package-lock.json  package.json
src/: App.vue  styles.scss  typings.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
